--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation -->
     <nav class="sticky top-0 z-40 bg-white/80 backdrop-blur-md border-b border-slate-100 no-print">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
-            <span class="font-bold text-xl text-slate-900">DLM.</span>
+            <span class="font-bold text-xl text-slate-900">DLM</span>
             <div class="hidden md:flex gap-8 text-sm font-medium text-slate-600">
                 <a href="#" class="hover:text-blue-600 transition-colors">Inicio</a>
                 <a href="#experience" class="hover:text-blue-600 transition-colors">Experiencia</a>
@@ -105,7 +105,7 @@
                 
                 <div class="w-48 h-48 md:w-72 md:h-72 flex-shrink-0 relative animate-fade-in">
                     <div class="absolute inset-0 bg-blue-600 rounded-full blur-2xl opacity-20 animate-pulse"></div>
-                    <img src="https://picsum.photos/400/400" alt="Diego Lijarcio Merino" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10">
+                    <img src="./img/1764575902098.jpg" alt="Diego Lijarcio Merino" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10">
                 </div>
             </div>
         </section>
