--- a/index.html
+++ b/index.html
@@ -540,13 +540,22 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-slate-900 text-slate-400 py-12 text-center no-print">
-        <div class="max-w-4xl mx-auto px-6">
-            <p class="mb-4">&copy; 2025 CV Interactivo. Construido con HTML, CSS y Tailwind.</p>
-            <div class="text-sm text-slate-600">
-                La información presentada es una demostración de currículum profesional.
-            </div>
+    <footer class="bg-slate-900 text-slate-400 py-12 no-print border-t border-slate-800">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+        <div class="text-white font-semibold tracking-wide uppercase text-sm mb-2">
+            Diego Lijarcio Merino
         </div>
-    </footer>
+        
+        <div class="w-12 h-px bg-blue-500 mx-auto mb-4"></div>
+
+        <p class="text-xs text-slate-500">
+            &copy; 2026 — Todos los derechos reservados.
+        </p>
+        
+        <div class="mt-4 text-[10px] text-slate-700 uppercase tracking-[0.2em]">
+            Diseño Profesional & Desarrollo
+        </div>
+    </div>
+</footer>
 </body>
 </html>
