--- a/index.html
+++ b/index.html
@@ -81,14 +81,36 @@
                         <a href="mailto:diegolijarcio388@gmail.com" class="px-6 py-3 bg-blue-600 text-white rounded-lg font-semibold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-600/20">
                             Contáctame
                         </a>
-                        <a href="assests/CV_Diego.pdf" download class="px-6 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg font-semibold hover:bg-slate-50 transition-colors flex items-center gap-2">
+                        <button onclick="descargarCVFetch()" class="px-6 py-3 bg-white border border-slate-200 text-slate-700 rounded-lg font-semibold hover:bg-slate-50 transition-colors flex items-center gap-2 cursor-pointer">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                             </svg>
                             Descargar CV
                             <span class="text-sm text-slate-500">· PDF · 1 página · 1.2 MB</span>
-                        </a>
-   
+                        </button>
+
+                        <script>
+                        async function descargarCVFetch() {
+                            try {
+                                const response = await fetch('/assests/CV_Diego.pdf');
+                                const blob = await response.blob();
+                                const url = window.URL.createObjectURL(blob);
+                                
+                                const link = document.createElement('a');
+                                link.href = url;
+                                link.download = 'Diego_Lijarcio_Merino_CV.pdf';
+                                document.body.appendChild(link);
+                                link.click();
+                                document.body.removeChild(link);
+                                
+                                window.URL.revokeObjectURL(url);
+                            } catch (error) {
+                                console.error('Error al descargar:', error);
+                                // Si falla, abrir en nueva pestaña
+                                window.open('assests/CV_Diego.pdf', '_blank');
+                            }
+                        }
+                        </script>
                     </div>
 
                     <div class="flex justify-center md:justify-start gap-6 pt-6 text-slate-400">
